# HH_parser_with_SQL

./: .gitignore  DBManager.py  LICENSE  README.md  hh_ru.py  main.py  pyproject.toml  temp.py  utils.py
src/: DBManager.py  hh_ru.py  queries.sql  utils.py
